fix wrong height on first table rows

--- a/src/Components/ScoreRow.css
+++ b/src/Components/ScoreRow.css
@@ -3,7 +3,7 @@
   cursor: default;
 }
 
-#scoreboard tr:first-child {
+#scoreboard thead tr {
   height: var(--unit);
 }
 
